# shift-hackathon-nantes-2024

./: .gitmodules  README.md  background.js  content.js  manifest.json  popup.css  popup.html
map-your-value/back/: .gitignore  README.md  main.py  openapi.json  pyproject.toml
map-your-value/back/embedding/: embedding.py
map-your-value/back/extraction/: chain.py  extract_features_gemini.py  extract_features_mistral.py  templates.py
map-your-value/back/extraction/company_fact_card/: jamie.txt  otter.txt  tldv.txt  zoom.txt
smart_files/: .gitignore  README.md  components.json  dev-app-update.yml  electron-builder.yml  jsconfig.json  package-lock.json  package.json  pyproject.toml  shell.nix  tailwind.config.js  user_prompt.json
smart_files/smart_files/: embedding_clients.py  embedding_generator.py  embedding_populator.py  gen_json_input.py  path_suggestor.py  populate_db.py  query_db.py  test_mistral.py
smart_files/src/main/: index.js
smart_files/src/preload/: index.js
smart_files/src/renderer/: index.html
smart_files/src/renderer/src/: App.vue
smart_files/src/renderer/src/assets/: base.css  main.css
smart_files/src/renderer/src/components/: CopyToClipBoard.vue  HomeVue.vue  IndexedFoldersComponent.vue  LandingVue.vue  NavBarComponent.vue  Prompt.vue  SearchResultsComponent.vue  SettingsVue.vue  SubBarComponent.vue  TopBarComponent.vue  UseCaseComponent.vue  Versions.vue
smart_files/src/renderer/src/components/ui/breadcrumb/: BreadcrumbEllipsis.vue  BreadcrumbItem.vue  BreadcrumbLink.vue  BreadcrumbList.vue  BreadcrumbPage.vue  BreadcrumbSeparator.vue
(+232 files in other folders)
